<resources>
    <string name="app_name">加密解密</string>

    <string name="registering">正在注册...</string>
    <string name="enter_phone">请输入手机号码</string>
    <string name="enter_password_six_to_sixteen">请输入6-16位密码</string>
    <string name="enter_confirm_password">请输入确认密码</string>
    <string name="the_two_passwords_differ">两次输入的密码不一致</string>
    <string name="enter_code">请输入验证码</string>
    <string name="no_connection">无网络连接</string>
    <string name="code_error">验证码错误</string>

    <string name="logining">正在登陆...</string>
    <string name="enter_the_account">请输入账号</string>
    <string name="enter_password">请输入密码</string>
    <string name="username_or_password_error">用户名或密码错误,请重新输入...</string>

    <string name="forget_password">忘记密码</string>
    <string name="verify">验证</string>
    <string name="get_code">获取验证码</string>
    <string name="confirm">确定</string>
    <string name="register">注册</string>
    <string name="I_have_read_and_agree_to_the_terms_of_security_encryption_to_decrypt">我已阅读并同意  安全加密解密条款</string>
    <string name="login">登陆</string>
    <string name="registering_new_user">注册新用户</string>

    <string name="the_phone_is_not_registered">该手机未注册...</string>
    <string name="codeing">正在验证...</string>
    <string name="commiting">正在提交...</string>
    <string name="password_is_changed">密码修改成功</string>
    <string name="password_change_failed_please_modify_it_again">密码修改失败，请重新修改</string>

    <string name="again_according_to_exit_the_program">再按一次退出程序</string>
    <string name="being_loaded_data">正在加载数据...</string>
    <string name="reminder">提示</string>
    <string name="confirm_to_delete_this_record">确认删除该条记录?</string>
    <string name="deleting_data">正在删除数据...</string>
    <string name="cancel">取消</string>
    <string name="no_content">咦...没有任何内容</string>
    <string name="the_mobile_phone_number_has_been_registered">该手机号已注册</string>
    <string name="registration_failed_please_register">注册失败，请重新注册</string>
    <string name="code_has_been_issued">验证码已下发</string>

    <string name="home">首页</string>
    <string name="data">数据</string>
    <string name="recreation">娱乐</string>
    <string name="title_activity_login">Sign in</string>

</resources>
