<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lwx.locker.feature.MainActivity">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"></View>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:baselineAligned="false"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tab_selector_home"
            android:gravity="center"
            android:paddingTop="6dp"
            android:text="@string/home"
            android:textColor="@drawable/tab_selector_tv_color"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/main_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:baselineAligned="false"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_data"
            android:gravity="center"
            android:paddingTop="6dp"
            android:text="@string/data"
            android:textColor="@drawable/tab_selector_tv_color"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/main_recreation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:baselineAligned="false"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_recreation"
            android:gravity="center"
            android:paddingTop="6dp"
            android:text="@string/recreation"
            android:textColor="@drawable/tab_selector_tv_color"
            android:textSize="12sp"/>

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
