<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.lwx.locker.feature.register.RegisterActivity">

    <RelativeLayout
        android:id="@+id/rly"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="@color/colorNormal"
            android:textSize="20sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/corners_bg_button"
        android:text="@string/register"
        android:textColor="@color/colorNormal"
        android:textSize="18sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/register"
        android:layout_below="@id/rly"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/corners_bg">

                <ImageView
                    android:id="@+id/phone_img"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/phone"/>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/phone_img"
                    android:background="@null"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp"/>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/phone"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/hint"/>

                <ImageView
                    android:id="@+id/password_img"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/phone_img"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/password"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/phone"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/password_img"
                    android:background="@null"
                    android:hint="@string/enter_password_six_to_sixteen"
                    android:inputType="textPassword"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp"/>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/password"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/hint"/>

                <ImageView
                    android:id="@+id/affirm_password_img"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/password_img"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/password"/>

                <EditText
                    android:id="@+id/affirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/password"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/affirm_password_img"
                    android:background="@null"
                    android:hint="@string/enter_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp"/>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/affirm_password"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/hint"/>

                <ImageView
                    android:id="@+id/code_img"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/affirm_password_img"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/code"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/affirm_password"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/code_img"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/code"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/enter_code"
                        android:textColor="@color/gray"
                        android:textColorHint="@color/hint"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/get_code"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/get_code"
                        android:textColor="@color/gray"
                        android:textSize="16sp"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/agree"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/I_have_read_and_agree_to_the_terms_of_security_encryption_to_decrypt"
                android:textColor="@color/colorNormal"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
