<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.lwx.locker.feature.login.LoginActivity">

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/corners_bg_button"
        android:text="@string/login"
        android:textColor="@color/colorNormal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rl"
        android:layout_width="0dp"
        android:layout_height="131dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/corners_bg"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/phone_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/phone"
            app:layout_constraintBottom_toBottomOf="@+id/phone"
            app:layout_constraintEnd_toStartOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/phone_img"
            android:background="@null"
            android:hint="@string/enter_the_account"
            android:inputType="phone"
            android:textColor="@color/gray"
            android:textColorHint="@color/hint"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/phone"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="70dp"
            android:background="@color/hint"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"/>

        <ImageView
            android:id="@+id/password_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/password"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/phone"
            android:layout_toStartOf="@+id/phone"
            android:background="@drawable/password"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toStartOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/phone"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="70dp"
            android:layout_toRightOf="@id/password_img"
            android:background="@null"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textColorHint="@color/hint"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/registering_new_user"
        android:textColor="@color/colorNormal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/colorNormal"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"/>
</android.support.constraint.ConstraintLayout>